// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Equation Functions - Fraction Nested Fractions 1`] = `
[
  0.35,
  0,
  0,
  0.0525,
  0,
  0.35,
  0,
  0.1971,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Fraction Nested Fractions 2`] = `
[
  0.35,
  0,
  0,
  0.0525,
  0,
  0.35,
  0,
  0.0968,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Fraction Nested Fractions 3`] = `
[
  0.7,
  0,
  0,
  0.035,
  0,
  0.7,
  0,
  -0.063,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Fraction Nested Fractions 4`] = `
[
  0.07,
  0,
  0,
  0.035,
  0,
  0.01,
  0,
  0.1668,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Fraction Nested Fractions 5`] = `
[
  0.14,
  0,
  0,
  0,
  0,
  0.01,
  0,
  0.049,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;
